adding events: bbckground blend effect, bcgkround color, input url image & modify html blend name effects

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                     <div class="menu-bc menu-bc--options">
                         <select name="colour-blend" id="select-colour-blend">
                             <option value="">None</option>
-                            <option value="clarify">Clarify</option>
+                            <option value="lighten">Clarify</option>
                             <option value="darken">Darken</option>
                             <option value="difference">Difference</option>
-                            <option value="brightness">Brightness</option>
+                            <option value="luminosity">Brightness</option>
                             <option value="multiply">Multiply</option>
                         </select>
                     </div>
