adding scripts for download button meme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     referrerpolicy="no-referrer"/>
     <!-- Style -->
     <link rel="stylesheet" href="./style/index.css">
+    <!-- Download img script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js" integrity="sha512-01CJ9/g7e8cUmY0DFTMcUw/ikS799FHiOA0eyHsUWfOetgbx/t6oV4otQ5zXKQyIrQGTHSmRVPIgrgLcZi/WMA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js" integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ==" crossorigin="anonymous"></script>
     <title>Meme editor</title>
 </head>
 <body>
@@ -33,7 +36,7 @@
             <div class="img-meme"></div>
             <p class="meme-bottom-text text-meme">Bottom Text</p>
         </div>
-        <button class="btn-download-meme"><i class="fa-solid fa-download"></i>Download meme</button>
+        <button class="btn-download-meme" id="btn-download-meme"><i class="fa-solid fa-download"></i>Download meme</button>
     </main>
     <!-- ASIDE MENU -->
     <aside class="menu-container hidden" id="menu-container">
