fixed issue with filter panel and bc transparent txt

--- a/index.html
+++ b/index.html
@@ -75,39 +75,39 @@
                 <div class="menu-filter">
                     <div class="menu-control-range">
                         <label for="brightness-line">Brightness</label>
-                        <input type="range" id="brightness-line" min="0" max="1" value="1" step="0.1">
+                        <input type="range" id="brightness-line" min="0" max="1" value="1" step="0.1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="opacity-line">Opacity</label>
-                        <input type="range" id="opacity-line" min="0" max="1" value="1" step="0.1">
+                        <input type="range" id="opacity-line" min="0" max="1" value="1" step="0.1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="contrast-line">Contrast</label>
-                        <input type="range" id="contrast-line" min="100" max="1000" value="100" step="1">
+                        <input type="range" id="contrast-line" min="100" max="1000" value="100" step="1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="blur-line">Blur</label>
-                        <input type="range" id="blur-line" min="0" max="10" value="0" step="0.1">
+                        <input type="range" id="blur-line" min="0" max="10" value="0" step="0.1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="grayscale-line">Grayscale</label>
-                        <input type="range" id="grayscale-line" min="0" max="100" value="0" step="1">
+                        <input type="range" id="grayscale-line" min="0" max="100" value="0" step="1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="sepia-line">Sepia</label>
-                        <input type="range" id="sepia-line" min="0" max="100" value="0" step="1">
+                        <input type="range" id="sepia-line" min="0" max="100" value="0" step="1" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="hue-line">Hue</label>
-                        <input type="range" id="hue-line" min="0deg" max="359" value="1" step="0">
+                        <input type="range" id="hue-line" min="0deg" max="359" value="1" step="0" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="saturation-line">Saturation</label>
-                        <input type="range" id="saturation-line" min="100" max="1000" value="100" step="10" class="default">
+                        <input type="range" id="saturation-line" min="100" max="1000" value="100" step="10" class="default" class="range">
                     </div>
                     <div class="menu-control-range">
                         <label for="negative-line">Negative</label>
-                        <input type="range" id="negative-line" min="0" max="1" value="0" step="0.1" class="default">
+                        <input type="range" id="negative-line" min="0" max="1" value="0" step="0.1" class="default" class="range">
                     </div>
                 </div>
             </section>
