--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <main class="display-flex-center">
         <div class="meme-container display-flex-center">
             <p class="meme-top-text text-meme">Top Text</p>
-            <div class="img-meme"></div>
+            <div class="img-meme" aria-label="Image meme"></div>
             <p class="meme-bottom-text text-meme">Bottom Text</p>
         </div>
         <button class="btn-download-meme" id="btn-download-meme"><i class="fa-solid fa-download"></i>Download meme</button>
     </main>
     <!-- ASIDE MENU -->
     <aside class="menu-container hidden" id="menu-container">
-        <button id="btn-close-menu" class="btn-close-menu"><i class="fa-solid fa-xmark"></i></button>
+        <button id="btn-close-menu" class="btn-close-menu" aria-label="Close menu"><i class="fa-solid fa-xmark"></i></button>
         <!-- IMG EDITOR -->
         <article id="menu-img-editor" class="menu-img-editor hidden">
             <h2>Image</h2>
@@ -58,7 +58,7 @@
                         <p id="text-bc-colour" class="text-bc-colour">#ffffff</p>
                     </div>
                     <div class="menu-bc menu-bc--options">
-                        <select name="colour-blend" id="select-colour-blend">
+                        <select name="colour-blend" id="select-colour-blend" aria-label="Menu background blend mode">
                             <option value="">None</option>
                             <option value="lighten">Clarify</option>
                             <option value="darken">Darken</option>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </section>
-            <button id="btn-reset-filters" class="btn-reset-filters">Reset filters</button>
+            <button id="btn-reset-filters" class="btn-reset-filters" aria-label="Reset filters">Reset filters</button>
         </article>
         <!-- TEXT EDITOR -->
         <article id="menu-text-editor" class="menu-text-editor hidden">
@@ -119,7 +119,7 @@
             <!-- TOP TEXT -->
             <section class="menu-editor">
                 <h3>Top</h3>
-                <input type="text" id="input-top-text" class="input-top-text" placeholder="TOP TEXT"></input>
+                <input type="text" id="input-top-text" class="input-top-text" placeholder="TOP TEXT" aria-label="Top text"></input>
                 <div class="checkbox">
                     <input type="checkbox" id="without-top-text">
                     <label for="without-top-text">Without top text</label>
@@ -128,7 +128,7 @@
             <!-- BOTTOM TEXT -->
             <section class="menu-editor">
                 <h3>Bottom</h3>
-                <input type="text" id="input-bottom-text" class="input-bottom-text" placeholder="BOTTOM TEXT"></textarea>
+                <input type="text" id="input-bottom-text" class="input-bottom-text" placeholder="BOTTOM TEXT" aria-label="Bottom text"></textarea>
                 <div class="checkbox">
                     <input type="checkbox" id="without-bottom-text">
                     <label for="without-bottom-text">Without bottom text</label>
@@ -138,7 +138,7 @@
             <section class="menu-editor">
                 <h3>Font</h3>
                 <!-- FONT FAMILY OPTIONS -->
-                <select name="Font Family" id="font-family-select" class="font-family-select">
+                <select name="Font Family" id="font-family-select" class="font-family-select" aria-label="Font family">
                     <option value="Arial">Arial</option>
                     <option value="Arial Black">Arial Black</option>
                     <option value="American Typewriter">American Typewriter</option>
@@ -153,9 +153,9 @@
                 <div class="menu-font-size">
                     <input type="number" id="input-font-size" class="input-font-size" name="Font size" aria-label="Font size" min="12" value="40">
                     <div class="menu-text-align">
-                        <button id="btn-text-left"><i class="fa-solid fa-align-left"></i></button>
-                        <button id="btn-text-center"><i class="fa-solid fa-align-center"></i></button>
-                        <button id="btn-text-rigth"><i class="fa-solid fa-align-right"></i></button>
+                        <button id="btn-text-left"><i class="fa-solid fa-align-left" aria-label="Text align left"></i></button>
+                        <button id="btn-text-center"><i class="fa-solid fa-align-center" aria-label="Text align center"></i></button>
+                        <button id="btn-text-rigth"><i class="fa-solid fa-align-right" aria-label="Text align right"></i></button>
                     </div>
                 </div>
             </section>
@@ -165,14 +165,14 @@
                     <div class="menu-colour">
                         <h3>Colour</h3>
                         <div class="menu-input-colour display-flex-center">
-                            <input type="color" name="Text colour" value="#000000" id="input-text-colour" class="input-text-colour">
+                            <input type="color" name="Text colour" value="#000000" id="input-text-colour" class="input-text-colour" aria-label="Text colour">
                             <p id="text-colour" class="text-colour">#000000</p>
                         </div>
                     </div>
                     <div class="menu-colour">
                         <h3>Background</h3>
                         <div class="menu-input-colour display-flex-center">
-                            <input type="color" name="Background colour text" value="#FFFFFF" id="input-bc-colour-text" class="input-bc-colour-text">
+                            <input type="color" name="Background colour text" value="#FFFFFF" id="input-bc-colour-text" class="input-bc-colour-text" aria-label="Background color text">
                             <p id="bc-colour-text" class="bc-colour-text">#FFFFFF</p>
                         </div>
                     </div>
@@ -186,9 +186,9 @@
             <section class="menu-editor">
                 <h3>Outline</h3>
                 <div class="menu-outline">
-                    <button  id="outline--none">None</button>
-                    <button  id="outline--white">Light</button>
-                    <button  id="outline--dark">Dark</button>
+                    <button  id="outline--none" aria-label="Outline none">None</button>
+                    <button  id="outline--light" aria-label="Outline light">Light</button>
+                    <button  id="outline--dark" aria-label="Otline dark">Dark</button>
                 </div>
             </section>
             <!-- FONT PADDING -->
