adding max to input type number for font size in html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </select>
                 <!-- FONT SIZE OPTIONS -->
                 <div class="menu-font-size">
-                    <input type="number" id="input-font-size" class="input-font-size" name="Font size" aria-label="Font size" min="12" value="40">
+                    <input type="number" id="input-font-size" class="input-font-size" name="Font size" aria-label="Font size" min="12" max="80" value="40">
                     <div class="menu-text-align">
                         <button id="btn-text-left"><i class="fa-solid fa-align-left" aria-label="Text align left"></i></button>
                         <button id="btn-text-center"><i class="fa-solid fa-align-center" aria-label="Text align center"></i></button>
